# CAS-503-Collectives

./: .gitignore  main.py  pyproject.toml
app/: app.py  headless-test.sh  sweeps.py
app/canvas_component/: boids-live.js  index.html
app/sweep_component/: boids-headless.js  index.html  shim.js
boids/: boids.py  index-modified.html
zaphod/: 1-CoarseGraining.ipynb  1-Scaling.ipynb  2-Phases.ipynb  4-SpreadingDynamics.ipynb  5-Decisions.ipynb  6-InformationDecomposition.ipynb  Dresslar_CAS503_M1_Scaling.ipynb  notes.md
